Fix funky sub offscreen behavior

--- a/src/style.css
+++ b/src/style.css
@@ -105,7 +105,10 @@ li {
 }
 
 .submarine {
-	overflow: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 	z-index: -1;
 }
 
